# pyprodos

./: .gitignore  CLAUDE.md  README.md  TODO.md  environment.yml  pyproject.toml  setup.cfg
src/: p8cli.py
src/prodos/: __init__.py  blocks.py  cli.py  device.py  directory.py  file.py  globals.py  metadata.py  p8datetime.py  volmap.py  volume.py
tests/: test_blocks.py  test_cli.py  test_cli_cp_mv.py  test_cli_create.py  test_cli_import_export.py  test_cli_log.py  test_cli_ls_info.py  test_cli_mkdir_rmdir.py  test_cli_options.py  test_cli_rm.py  test_cli_roundtrip.py  test_device.py  test_dirs.py  test_file.py  test_p8datetime.py  test_volmap.py
tests/data/: README.md
