[metadata]
name = pyprodos
version = 0.0.1
author = Patrick Surry
author_email = patrick.surry@gmail.com
description = Python implementation of Apple ProDOS 8 file system
long_description = file: README.md
long_description_content_type = text/markdown
keywords = prodos filesystem
url = https://github.com/patricksurry/pyprodos
project_urls =
    Bug Tracker = https://github.com/patricksurry/pyprodos/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = prodos
python_requires = >=3.11
install_requires =
    typer >= 0.9
    bitarray >= 2.9

[options.entry_points]
console_scripts =
    prodos = p8cli:app [typer]
